# looma-zervi

./: .env.example  .gitattributes  .gitignore  .sync-config.json  .venv  README.md  STRIPE_HK_COMPANY_GUIDE.md  _server_err3.txt  _server_out3.txt  docker-compose.yml  k6_baseline.json  k6_comparison_report.json  k6_deepseek_uncached.json  k6_nocache.json  k6_summary.json  nginx-looma-zervi-ip.conf  nginx-looma-zervi-overseas.conf  nginx-looma-zervi.conf  nginx-vultr.conf  package.json  pyproject.toml  requirements.txt  首次星际匹配_子项目接口契约.md
app/: main.py
backend/: .env.example  dev.sh  gunicorn_config.py  requirements.txt  run.py  start_gunicorn.sh  t
backend/mcp-servers/: mcp_auth.py  pyproject.toml  server.py
cli/: README.md  install.sh  pyproject.toml
cli/looma_cli/: __init__.py  common.py  main.py
cli/looma_cli/commands/: __init__.py  auth_cmd.py  credit_cmd.py  cron_cmd.py  deploy.py  doctor.py  health.py  status_cmd.py
cloudbase/: README.md  cloudbaserc.json
data/: looma.db
docker/: .dockerignore  Dockerfile.backend  docker-compose.yml  nginx.conf
docs/: ACHIEVEMENTS_LAYER5.md  API_PARTNER_ALIGNMENT.md  COMMERCE_CLOSURE_STATUS.md  CONSISTENCY_CROSS_REPO_SYNERGY_PROPOSAL.md  CURRENT_SYSTEM_ARCHITECTURE.md  DEPLOY_OVERSEAS_SETUP.md  DEPLOY_VERIFY_HANDOFF_20260709.md  DUAL_REPO_SYNC_STATUS.md  DUAL_TRACK_ACCEPTANCE_CHECKLIST.md  Docker容器部署方案.md  HARMONY_ADAPTATION_EXECUTION_PLAN.md  HARMONY_ATOMIC_SERVICE_ADAPTATION_STRATEGY.md  HARMONY_FRONTEND_ALIGNMENT.md  HARMONY_TECHNICAL_VALIDATION_CHECKLIST.md  INTERNAL_TEST_READINESS.md  JASON_DECISION_ACK.md  JWT认证链路排查与修复说明_szbenyx.md  LOCAL_MVP_DEBUGGING.md  MANIFESTO.md  MCP底座交付说明_内测.md  MINIPROGRAM_LOCAL_DEBUGGING.md  MULTI_CLIENT_CX_STRATEGY.md  OVERSEAS_DEPLOY.md  OVERSEAS_ZERVI_PWA_GAP_FILL_2026-07-13.md  PLANETX_MATCH_INTERNAL_TEST.md  PRESSURE_TEST_ASK_CONTRACT_ADR.md  PRODUCTION_ARCHITECTURE.md  REMEDIATION_ROADMAP.md  ROUND1_INTEGRATION_REPORT.md  SMOKE_MATCH_REPORT.md  SMOKE_TEST_GUIDE.md  SMOKE_TEST_REPORT_20260709.md  SMOKE_TEST_SUMMARY.md  SOCIAL_GRAPH_GUIDE.md  SOCIAL_RINGS_INTEGRATION_RUNBOOK.md  TRUST_LAYER.md  (+17 more)
zervi/: Cargo.toml
zervi/src/: client.rs  main.rs  models.rs
(+228 files in other folders)
