[package]
name = "zervi"
version = "0.1.0"
edition = "2021"
description = "Zervi — Looma 的 Rust 客户端，本地优先的智能终端"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# 本地 pgvector 支持（P2 启用）
# sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# 本地 Ollama 推理（P2 启用）
# ollama-rs = "0.2"
