# Looma MCP Servers (FastMCP 3.x Sidecar)
# Python ≥ 3.10 required, install: pip install fastmcp
[project]
name = "looma-mcp-servers"
version = "0.1.0"
description = "FastMCP Sidecar: rag / match_jobs / parse_resume tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "requests>=2.31.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools]
py-modules = []